# ChessSFML

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
ChessSFML/: CMakeLists.txt  ChessSFML.cpp  ChessSFML.h
ChessSFML/imgui-console-master/include/csys/: argument_parser.h
ChessSFML/imgui-console-master/include/imgui_console/: imgui_console.h
ChessSFML/imgui-console-master/src/: imgui_console.cpp
ChessSFML/include/: CSettings.h  ChessBoard.h  DBController.h  NClient.h  NetClient.h  NetParser.h  OnGameUI.h  RenderClassicChess.h  RenderMenu.h  SFtoS.h
ChessSFML/server/: NetServer.cpp
ChessSFML/source/: settings.txt
ChessSFML/src/: ChessBoard.cpp  ComCode.cpp  OnGameUI.cpp  RenderClassicChess.cpp  RenderMenu.cpp  Source.cpp
